--- a/css-opacity/css-opacity.html
+++ b/css-opacity/css-opacity.html
@@ -74,15 +74,22 @@ background-color: grey;
 }
 
 
-div.transbox {
-  margin: 30px;
-  background-color: #ffffff;
-  border: 1px solid black;
-  opacity: 0.6;
-}
 #img2 {
-z-index: ;
+    position: absolute;
+  z-index: 2;
+  height: 100px;
+  width: 350px;
+  opacity: 0.5;
 }
+
+#img3 {   
+  z-index: 3;
+  padding-left: 50px;
+  padding-top: 30px;
+  height: 100px;
+  width: 350px;
+}
+   
 
 </style>
 </head>
@@ -123,10 +130,9 @@ z-index: ;
             <td id="cell9">10%</td>
         </tr>
 
-<img src="sunflower.jpg" alt="sunflowers">
-<img id="img2" src="plane.jpg" alt="overlapping plane">
-     </div>
-    </div>
+<img id="img2" src="sunflower.jpg" alt="sunflowers">
+<img id="img3" src="plane.jpg" alt="overlapping plane">
+
           
 
 
