--- a/css-dropdowns/css-navbar-vert-news.html
+++ b/css-dropdowns/css-navbar-vert-news.html
@@ -62,15 +62,18 @@ li a:hover:not(.active) {
 
   <div>
 <ul>
-  <li><a href="css-navbar-vert-home.html">Home</a>
-  <a class="active" href="css-navbar-vert-news.html">News</a>
-  <div class="newsdropdown">
-    <a href="#">Daily News</a>
-  <a href="#">Weekly News</a>
-  <a href="#">Monthly News</a> 
- <a href="css-navbar-vert-contacts.html">Contact</a>
-  <a href="css-navbar-vert-about.html">About</a>
+  <li><a href="css-navbar-vert-home.html">Home</a></li>
+    <div class="dropdown">
+      <li><a class="active" href="css-navbar-vert-news.html">News</a></li>
+       <div class="dropdown-content">
+          <a href="#">Daily News</a>
+          <a href="#">Weekly News</a>
+          <a href="#">Monthly News</a> 
+      </div>
   </div>
+  <li><a href="css-navbar-vert-contacts.html">Contact</a></li>
+    <li><a href="css-navbar-vert-about.html">About</a></li>
+
 </ul>
 </div>
 
