--- a/css-dropdowns/css-navbar-vert-contacts.html
+++ b/css-dropdowns/css-navbar-vert-contacts.html
@@ -34,23 +34,54 @@ li a:hover:not(.active) {
   background-color: #94f3d0;
   color: white;
 }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 </style>
 </head>
 <body>
 
+  <div>
 <ul>
   <li><a href="css-navbar-vert-home.html">Home</a></li>
-  <li><a href="css-navbar-vert-news.html">News</a></li>
-  <li><a class="active" href="css-navbar-vert-contacts.html">Contact</a></li>
-  <li><a href="css-navbar-vert-about.html">About</a></li>
-</ul>
+    <div class="dropdown">
+      <li><a  href="css-navbar-vert-news.html">News</a></li>
+       <div class="dropdown-content">
+          <a href="#">Daily News</a>
+          <a href="#">Weekly News</a>
+          <a href="#">Monthly News</a> 
+      </div>
+  </div>
+  <li> <a class="active" href="css-navbar-vert-contacts.html">Contact</a></li>
+    <li><a href="css-navbar-vert-about.html">About</a></li>
 
+</ul>
+</div>
 
 </style>
 </head>
 <body>
 <div style="margin-left:25%;padding:1px 16px;height:1000px;">
-    <h1>Contacts</h1>
+    <h1>Contact</h1>
     
 </body>
 </html>
