--- a/css-dropdowns/css-navbar-vert-about.html
+++ b/css-dropdowns/css-navbar-vert-about.html
@@ -1,95 +1,160 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>CSS Navigation Bar Vertical Home</title>
-<style>
-body {
-  margin: 0;
-}
+  <title>CSS Navigation Bar Vertical Home</title>
+  <style>
+    body {
+      margin: 0;
+    }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
-}
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 25%;
+      background-color: #f1f1f1;
+      position: fixed;
+      height: 100%;
+      overflow: auto;
+    }
 
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
+    li a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
 
-li a.active {
-  background-color: #52e4ae;
-  color: white;
-}
+    li a.active {
+      background-color: #52e4ae;
+      color: white;
+    }
 
-li a:hover:not(.active) {
-  background-color: #94f3d0;
-  color: white;
-}
+    li a:hover:not(.active) {
+      background-color: #94f3d0;
+      color: white;
+    }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    .dropdown-content0 {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+    .dropdown-content0 a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+    .dropdown-content0 a:hover {
+      background-color: #f1f1f1
+    }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-</style>
+    .dropdown0:hover .dropdown-content0 {
+      display: block;
+    }
+
+
+
+    .dropdown-content1 {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content1 a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown-content1 a:hover {
+      background-color: #f1f1f1
+    }
+
+    .dropdown1:hover .dropdown-content1 {
+      display: block;
+    }
+
+
+
+    .dropdown-content2 {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content2 a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown-content2 a:hover {
+      background-color: #f1f1f1
+    }
+
+    .dropdown2:hover .dropdown-content2 {
+      display: block;
+    }
+  </style>
 </head>
+
 <body>
 
   <div>
-<ul>
-  <li><a href="css-navbar-vert-home.html">Home</a></li>
-    <div class="dropdown">
-      <li><a  href="css-navbar-vert-news.html">News</a></li>
-       <div class="dropdown-content">
+    <ul>
+      <li><a href="css-navbar-vert-home.html">Home</a></li>
+      <div class="dropdown2">
+        <li><a href="css-navbar-vert-news.html">News</a></li>
+        <div class="dropdown-content2">
           <a href="#">Daily News</a>
           <a href="#">Weekly News</a>
-          <a href="#">Monthly News</a> 
+          <a href="#">Monthly News</a>
+        </div>
       </div>
+      <li><a href="css-navbar-vert-contacts.html">Contact</a></li>
+      <li> <a class="active" href="css-navbar-vert-about.html">About</a>
+
+      </li>
+
+    </ul>
   </div>
-  <li><a href="css-navbar-vert-contacts.html">Contact</a></li>
-    <li> <a class="active" href="css-navbar-vert-about.html">About</a>
-      
-    </li>
 
-</ul>
-</div>
+  </style>
+  </head>
 
-</style>
-</head>
-<body>
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
-    <h1>About</h1>
-    <div class="dropdown">
-      <img src="boejiden.jpg" alt="BoeJiden" width="100" height="50">
-      <div class="dropdown-content">
-      <img src="boejiden.jpg" alt="BoeJiden" width="300" height="200">
-      <div class="desc">Boe Jiden</div>
+  <body>
+    <div style="margin-left:25%;padding:1px 16px;height:1000px;">
+      <h1>About</h1>
+      <div class="dropdown0">
+        <img src="boejiden.jpg" alt="BoeJiden" width="100" height="50">
+        <div class="dropdown-content0">
+          <img src="boejiden.jpg" alt="BoeJiden" width="300" height="200">
+          <div class="desc">Boe Jiden</div>
+        </div>
       </div>
-    </div>
-</body>
+        <div class="dropdown1">
+          <img src="JidenPerv.webp" alt="Joe the perv" width="100" height="50">
+          <div class="dropdown-content1">
+            <img src="JidenPerv.webp" alt="Joe the perv" width="300" height="200">
+            <div class="desc">Joe the perv</div>
+          </div>
+        </div>
+  </body>
+
 </html>
