--- a/css-dropdowns/css-navbar-vert-about.html
+++ b/css-dropdowns/css-navbar-vert-about.html
@@ -122,9 +122,9 @@
       <div class="dropdown2">
         <li><a href="css-navbar-vert-news.html">News</a></li>
         <div class="dropdown-content2">
-          <a href="#">Daily News</a>
-          <a href="#">Weekly News</a>
-          <a href="#">Monthly News</a>
+          <a href="dailynews.html">Daily News</a>
+          <a href="weeklynews.html">Weekly News</a>
+          <a href="monthlynews.html">Monthly News</a>
         </div>
       </div>
       <li><a href="css-navbar-vert-contacts.html">Contact</a></li>
@@ -145,14 +145,14 @@
         <img src="boejiden.jpg" alt="BoeJiden" width="100" height="50">
         <div class="dropdown-content0">
           <img src="boejiden.jpg" alt="BoeJiden" width="300" height="200">
-          <div class="desc">Boe Jiden</div>
+          <div class="desc">President Jiden</div>
         </div>
       </div>
         <div class="dropdown1">
           <img src="JidenPerv.webp" alt="Joe the perv" width="100" height="50">
           <div class="dropdown-content1">
             <img src="JidenPerv.webp" alt="Joe the perv" width="300" height="200">
-            <div class="desc">Joe the perv</div>
+            <div class="desc">CEO Joe</div>
           </div>
         </div>
   </body>
