--- a/css-dropdowns/css-navbar-vert-contacts.html
+++ b/css-dropdowns/css-navbar-vert-contacts.html
@@ -69,9 +69,9 @@ li a:hover:not(.active) {
     <div class="dropdown">
       <li><a  href="css-navbar-vert-news.html">News</a></li>
        <div class="dropdown-content">
-          <a href="#">Daily News</a>
-          <a href="#">Weekly News</a>
-          <a href="#">Monthly News</a> 
+          <a href="dailynews.html">Daily News</a>
+          <a href="weeklynews.html">Weekly News</a>
+          <a href="monthlynews.html">Monthly News</a> 
       </div>
   </div>
   <li> <a class="active" href="css-navbar-vert-contacts.html">Contact</a></li>
