--- a/css-multiple-backgrounds/css-multiple-backgrounds.html
+++ b/css-multiple-backgrounds/css-multiple-backgrounds.html
@@ -6,16 +6,18 @@
 #multipic {
     height: 500px;
     width: 650px; 
-    background-image: url(albrecht.jpg), url(tile.webp), url(crown.png);
-  background-position: right bottom, left top, center right;
-  background-repeat: no-repeat, repeat, repeat;
-  
+    background-image: url(crown2.png), url(albrecht.jpg), url(tile.webp);
+  background-position: 420px 160px, right bottom, left top;
+  background-repeat: no-repeat, no-repeat, repeat;
+  background-size: 150px, auto, auto;
 }
 
 
 </style>
 </head>
 <body>
-<div id="multipic"> </div>
+<div id="multipic"> 
+    
+</div>
 </body>
 </html>
