--- a/css-multiple-backgrounds/css-multiple-backgrounds.html
+++ b/css-multiple-backgrounds/css-multiple-backgrounds.html
@@ -11,13 +11,21 @@
   background-repeat: no-repeat, no-repeat, repeat;
   background-size: 150px, auto, auto;
 }
+#shorthand {
+    height: 500px;
+    width: 650px; 
+    background: #ffffff url(crown2.png) url(albrecht.jpg) url(tile.webp) no-repeat 420px 160px;
 
+    background-size: 150px, auto, auto;
+}
 
 </style>
 </head>
 <body>
 <div id="multipic"> 
     
+</div>
+<div id="shorthand">
 </div>
 </body>
 </html>
