--- a/css-multiple-backgrounds/css-multiple-backgrounds.html
+++ b/css-multiple-backgrounds/css-multiple-backgrounds.html
@@ -24,12 +24,16 @@ body {
 .hero-image {
   background-image: url(joshua.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  
-  width: fit-content;
-  height: 100%;
+  background-size: auto;
+ 
+  width: 240px;
+  height: 240px;
 }
-
+.hero-text {
+text-align: center;
+padding-top: 80px;
+  color: rgb(3, 214, 144);
+}
 </style>
 </head>
 <body>
@@ -38,7 +42,7 @@ body {
    
 </div>
 <div class="hero-image">
-    <h1> Cayden Mackey</h1>
+    <h1 class="hero-text"> Cayden Mackey</h1>
   </div>
 </div>
 <div id="shorthand">
