--- a/css-gradients/css-gradients.html
+++ b/css-gradients/css-gradients.html
@@ -17,7 +17,9 @@
 #c { 
     background-image: linear-gradient(to bottom right, rgb(226, 65, 65), rgb(255, 255, 139), rgb(140, 234, 205), brown);  
 }
-
+#d { 
+    background-image: linear-gradient(to top right, rgb(226, 65, 65, 0.5), rgb(255, 255, 139, 0.9), rgb(140, 234, 205, 0.3), rgb(55, 227, 233, 1.0), rgb(33, 179, 33, 0.4);  
+}
 </style>
 </head>
 <body>
