--- a/css-gradients/css-gradients.html
+++ b/css-gradients/css-gradients.html
@@ -18,13 +18,24 @@
     background-image: linear-gradient(to bottom right, rgb(226, 65, 65), rgb(255, 255, 139), rgb(140, 234, 205), brown);  
 }
 #d { 
-    background-image: linear-gradient(to top right, rgb(226, 65, 65, 0.5), rgb(255, 255, 139, 0.9), rgb(140, 234, 205, 0.3), rgb(55, 227, 233, 1.0), rgb(33, 179, 33, 0.4);  
+    background-image: linear-gradient(to top right, rgb(226, 65, 65, 0.5), rgb(255, 255, 139, 0.9), rgb(140, 234, 205, 0.3), rgb(55, 227, 233, 1.0), rgb(33, 179, 33, 0.4));  
+}
+#e {
+  background-image: repeating-linear-gradient(180deg, rgba(182, 23, 23, 0.349), rgba(72, 141, 52, 0.61), rgba(26, 114, 26, 0.568) 90px);
+
+}
+#f {
+  background-image: repeating-linear-gradient(130deg, rgba(145, 24, 114, 0.774), rgba(206, 46, 86, 0.61), rgba(224, 46, 180, 0.541) 30px);
+
+}
+#g {
+  background-image: radial-gradient(rgb(223, 121, 121), rgb(207, 233, 94), rgb(255, 220, 20), rgb(247, 55, 199));
 }
 </style>
 </head>
 <body>
 <div id="a" class="square">
-
+/
 </div>
 
 <div id="b" class="square">
