--- a/css-final-project/index.html
+++ b/css-final-project/index.html
@@ -50,27 +50,31 @@
         img {
             width: 40%;
         }
+
+    #link {
+    padding-left: 25px;
+    }
     </style>
 </head>
 
 <body>
 
     <div class="header">
-        <h1>Welcome to Florida</h1>
+        <h1>Welcome to Florida!</h1>
     </div>
 
     <div class="topnav">
-        <a href="#">Main Page</a>
-        <a href="#">Accomodations</a>
-        <a href="#">restaurants</a>
-        <a href="#">History</a>
-        <a href="#">Photots</a>
-        <a href="#">Directions</a>
+        <a href="index.html">Main Page</a>
+        <a href="accomodations.html">Accomodations</a>
+        <a href="restaurants.html">Restaurants</a>
+        <a href="history.html">History</a>
+        <a href="photos.html">Photots</a>
+        <a href="directions.html">Directions</a>
     </div>
 
     <img src="hhae5e.webp" alt="bridge on water">
     <img src="ebfr3y-1.webp" alt="bridge on sand">
-
+<div>
     <p class="bodyP"> Florida is a awesome location to go to due to its warm climate, beautiful seashores, and numerous
         sights. you can go to Disney world, general Studios, and other subject parks. you may additionally enjoy the
         nightlife in Miami or the natural beauty of the Everglades. The kingdom is understood for its oranges and
@@ -78,7 +82,10 @@
         is domestic to many museums, artwork galleries, and historical landmarks. The country has a rich cultural
         historical past, with impacts from native American, Spanish, and African American cultures. Florida is a
         extremely good vicinity to loosen up and unwind, with its many parks, beaches, and out of doors sports.</p>
+        <br>
+<a id="link" href="https://www.stateofflorida.com/ ">Come Visit Florida!</a>
 
+</div>
 
 </body>
 
